apps/adguard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  labels:
    app: adguard
    app.kubernetes.io/instance: adguard-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: adguard
    app.kubernetes.io/part-of: adguard
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: adguard
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: adguard
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: web-admin
    protocol: TCP
    port: 80
    targetPort: 3000
  internalTrafficPolicy: Cluster
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web-interface
  labels:
    app: adguard
    app.kubernetes.io/instance: adguard-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: adguard
    app.kubernetes.io/part-of: adguard
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: adguard
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: adguard
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: web-interface
    protocol: TCP
    port: 8080
    targetPort: 80
  internalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "adguard-home-shared-key"
  labels:
    app: adguard
    app.kubernetes.io/instance: adguard-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: adguard
    app.kubernetes.io/part-of: adguard
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: adguard
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: adguard
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  type: LoadBalancer
  loadBalancerIP: 192.168.3.12
  internalTrafficPolicy: Cluster
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: "adguard-home-shared-key"
  labels:
    app: adguard
    app.kubernetes.io/instance: adguard-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: adguard
    app.kubernetes.io/part-of: adguard
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: adguard
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: adguard
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
  type: LoadBalancer
  loadBalancerIP: 192.168.3.12
  internalTrafficPolicy: Cluster
  externalTrafficPolicy: Local
