apps/adguard/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-dashboard
  namespace: adguard
  annotations:
  - flame.pawelmalak/type=application
  - flame.pawelmalak/name=AdGuard
  - flame.pawelmalak/url=https://adguard.elposhox.dev
  - flame.pawelmalak/icon=kubernetes
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`adguard.elposhox.dev`)
    services:
    - kind: Service
      name: adguard-home
      port: 3000
  tls:
    secretName: domain-tls
